[package]
name = "ercot-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = [ "blocking" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
scraper = "0.14.0"
csv = "1.1.6"
chrono = "0.4.23"